<resources>
    <string name="app_name">HelloWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_details">Details</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_flags">Flags</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about">About</string>

    <string name="fragment_about_logo_desc">About logo</string>
    <string name="fragment_about_title">Hello World</string>
    <string name="fragment_about_website" translatable="false">https://kotlinlang.org</string>
    <string name="fragment_about_email" translatable="false">test@gmail.com</string>
    <string name="fragment_about_phone_number" translatable="false">+7 (555) 555–55–55</string>
    <string name="fragment_about_app_version" translatable="false">1.0</string>
    <string name="fragment_about_system_default">System default</string>

    <string name="fragment_home_image_desc">Loaded image</string>
    <string name="fragment_home_load_image_button_text">Load image</string>

    <string name="fragment_gallery_image_desc">Loaded image</string>
    <string name="fragment_gallery_load_image_button_text">Load image</string>
    <string name="fragment_gallery_url_hint">Input URL</string>

    <string name="fragment_weather_temperature_title" translatable="false">t</string>
    <string name="fragment_weather_temperature_value_c" translatable="false">0</string>
    <string name="fragment_weather_temperature_unit_c" translatable="false">°C</string>
    <string name="fragment_weather_load_weather_button_text">Load weather</string>
    <string name="fragment_weather_city_title">City</string>
    <string name="fragment_weather_city_hint">Input city</string>
    <string name="fragment_weather_region_title">Region</string>
    <string name="fragment_weather_country_title">Country</string>
    <string name="fragment_weather_wind_title">Wind</string>
    <string name="fragment_weather_wind_speed_unit_kph">kph</string>
    <string name="fragment_weather_animation1_desc">Weather sun and cloud</string>
    <string name="fragment_weather_animation2_desc">Weather sun</string>

    <string name="fragment_sandbox_title">For experiments</string>

    <string name="fragment_flags_austria">Austria</string>
    <string name="fragment_flags_austria_image_desc">Austria flag image</string>
    <string name="fragment_flags_poland">Poland</string>
    <string name="fragment_flags_poland_image_desc">Poland flag image</string>
    <string name="fragment_flags_italy">Italy</string>
    <string name="fragment_flags_italy_image_desc">Italy flag image</string>
    <string name="fragment_flags_colombia">Colombia</string>
    <string name="fragment_flags_colombia_image_desc">Colombia flag image</string>
    <string name="fragment_flags_madagascar">Madagascar</string>
    <string name="fragment_flags_madagascar_image_desc">Madagascar flag image</string>
    <string name="fragment_flags_thailand">Thailand</string>
    <string name="fragment_flags_thailand_image_desc">Thailand flag image</string>
    <string name="fragment_flags_denmark">Denmark</string>
    <string name="fragment_flags_denmark_image_desc">Denmark flag image</string>
    <string name="fragment_flags_switzerland">Switzerland</string>
    <string name="fragment_flags_switzerland_image_desc">Switzerland flag image</string>

    <string name="fragment_details_image_id" >Id</string>
    <string name="fragment_details_image_author" >Author</string>
    <string name="fragment_details_image_width" >width</string>
    <string name="fragment_details_image_height" >height</string>
    <string name="fragment_details_image_url" >Url</string>
    <string name="fragment_details_image_download_url" >Download url</string>
    <string name="fragment_details_image_width_height_unit" translatable="false">dp</string>
    fragment_details_image_author
    <string name="fragment_details_image_hint">Loaded image</string>


    <string name="splash_screen_logo_desc">Android robot</string>

    <string name="item_title">Title</string>
    <string name="item_image_desc">Random image</string>

</resources>