<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="@dimen/content_paddingVertical_main">


        <LinearLayout
            android:id="@+id/fragment_weather_image_row"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginVertical="@dimen/fragment_about_button_row_marginVertical"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/content_paddingHorizontal_main">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/fragment_weather_sun_cloud"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/fragment_weather_animation1_desc"
                android:layout_gravity="start|center_vertical"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/weather" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_weather_city_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fragment_weather_city_row_marginVertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/content_paddingHorizontal_main">

            <LinearLayout
                android:id="@+id/setCity_row"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_weather_city_row_height"
                android:layout_marginVertical="@dimen/fragment_weather_row_marginVertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.18"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_city_title" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08" />

                <EditText
                    android:id="@+id/weather_city_input"
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="@dimen/fragment_weather_city_row_height"
                    android:hint="@string/fragment_weather_city_hint"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    android:inputType="text"
                    android:gravity="start|center_vertical"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/region_row"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_weather_row_height"
                android:layout_marginVertical="@dimen/fragment_weather_row_marginVertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.18"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_region_title" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08" />

                <TextView
                    android:id="@+id/weather_region_value"
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_region_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_row"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_weather_row_height"
                android:layout_marginVertical="@dimen/fragment_weather_row_marginVertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.18"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_country_title" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08" />

                <TextView
                    android:id="@+id/weather_country_value"
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_country_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/windKph_row"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_weather_row_height"
                android:layout_marginVertical="@dimen/fragment_weather_row_marginVertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.18"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_wind_title" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08" />


                <TextView
                    android:id="@+id/weather_wind_speed_value"
                    style="@style/TextAppearance.HelloWorld.weatherRows"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_temperature_value_c" />

                <TextView
                    android:id="@+id/weather_wind_speed_unit"
                    style="@style/TextAppearance.HelloWorld.weatherRowsResult"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_wind_speed_unit_kph" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/temperature_row"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_weather_temperature_row_height"
                android:layout_marginVertical="@dimen/fragment_weather_row_marginVertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.HelloWorld.weatherTemperatureRow"
                    android:layout_width="0dp"
                    android:layout_weight="0.18"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_temperature_title" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08" />


                <TextView
                    android:id="@+id/weather_temperature_value"
                    style="@style/TextAppearance.HelloWorld.weatherTemperatureRow"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_temperature_value_c" />

                <TextView
                    android:id="@+id/weather_temperature_unit"
                    style="@style/TextAppearance.HelloWorld.weatherTemperatureRow"
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:gravity="start|center_vertical"
                    android:text="@string/fragment_weather_temperature_unit_c" />

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/fragment_home_image_desc"
                    android:gravity="start|end"
                    android:scaleType="centerCrop" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_weather_temperature_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/fragment_home_button_row_marginVertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/content_paddingHorizontal_main">

        <!--    <Button
                android:id="@+id/weather_loadWeatherButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_home_setUrlButton_marginTop"
                android:layout_marginBottom="@dimen/fragment_home_setUrlButton_marginBottom"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/fragment_weather_load_weather_button_text"
                android:textAppearance="@style/TextAppearance.HelloWorld.ButtonTitle"
                android:textColor="#008400"
                app:backgroundTint="#C0C0C0"
                app:cornerRadius="50dp"
                app:strokeColor="#008400"
                app:strokeWidth="2dp" />   -->

        </LinearLayout>

    </LinearLayout>
</ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
