<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout_home"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="top"
        android:paddingVertical="@dimen/content_paddingVertical_main">

        <LinearLayout
            android:id="@+id/fragment_home_image_row"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/fragment_about_button_row_marginVertical"
            android:paddingHorizontal="@dimen/content_paddingHorizontal_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_gallery_image_row_height">

            <ImageView
                android:id="@+id/gallery_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/fragment_gallery_image_desc"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fragment_home_button_row"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginVertical="@dimen/fragment_gallery_button_row_marginVertical"
            android:paddingHorizontal="@dimen/content_paddingHorizontal_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/gallery_url_input"
                android:hint="@string/fragment_gallery_url_hint"
                android:inputType="textUri"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_gallery_button_row_layout_height"
                tools:ignore="RtlSymmetry"/>

            <Button
                android:id="@+id/gallery_loadImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_home_setUrlButton_marginTop"
                android:layout_marginBottom="@dimen/fragment_gallery_setUrlButton_marginBottom"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="#C0C0C0"
                app:cornerRadius="50dp"
                app:strokeWidth="2dp"
                app:strokeColor="#008400"
                android:text="@string/fragment_gallery_load_image_button_text"
                android:textColor="#008400"
                android:textAppearance="@style/TextAppearance.HelloWorld.ButtonTitle" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
